<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/formulario"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_centerHorizontal="true"
            android:text="FORMULARIO"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Dni" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Nombre" />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Apellidos" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etNumTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="numTarjeta"
            android:inputType="number" />

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="VencimientoTarjeta"
            android:inputType="date" />

        <EditText
            android:id="@+id/etCodSeguridad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="CodigoSeguridadDtarjeta"
            android:inputType="number" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ENVIAR"
            android:onClick="guardar"/>
        <Button
            android:id="@+id/btnAtras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RETORNAR"
            android:onClick="retornarLogin"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>